--- a/calc.html
+++ b/calc.html
@@ -217,18 +217,18 @@
                 <td>
                     <select id="ddlMysticCode">
                         <option value="0">无</option>
-                        <option value="1">战斗服</option>
-                        <option value="2">04服</option>
-			<option value="3">骑士王服</option>
-			<option value="4">初始服</option>
-			<option value="5">西服</option>
-			<option value="6">泳装</option>
-			<option value="7">月海</option>
-			<option value="8">月背</option>
-			<option value="9">极地服</option>
-			<option value="10">夏威夷衫</option>
-			<option value="11">新年服</option>
-			<option value="12">宇航服</option>
+                        <option value="0">战斗服</option>
+                        <option value="50">04服</option>
+			<option value="0">骑士王服</option>
+			<option value="0">初始服</option>
+			<option value="0">西服</option>
+			<option value="0">泳装</option>
+			<option value="0">月海</option>
+			<option value="0">月背</option>
+			<option value="10">极地服</option>
+			<option value="20">夏威夷衫</option>
+			<option value="35">新年服</option>
+			<option value="50">宇航服</option>
                     </select>
                 </td>
             </tr>
@@ -239,41 +239,41 @@
                 </td>
 		<td>敌人1</td>
 		<td>
-		    <select id="ddlEn1">
-                        <option value="1.0">1.0</option>
-                        <option value="0.8">0.8</option>
-                        <option value="0.9">0.9</option>
-                        <option value="1.1">1.1</option>
-                        <option value="1.2">1.2</option>
+		    <select id="ddlEnemyClass1">
+                        <option value="1.0">Default</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="1.1">Rider</option>
+                        <option value="1.2">Caster/MC</option>
                     </select>
-		    <label for="ckEn1">
-                        <input type="checkbox" id="ckEn1" value="1" /> 死灵
+		    <label for="ckIsUndying1">
+                        <input type="checkbox" id="ckIsUndying1" value="1" /> 死灵
                     </label>
 		</td>
 		<td>敌人2</td>
 		<td>
-                    <select id="ddlEn2">
-                        <option value="1.0">1.0</option>
-                        <option value="0.8">0.8</option>
-                        <option value="0.9">0.9</option>
-                        <option value="1.1">1.1</option>
-                        <option value="1.2">1.2</option>
+                    <select id="ddlEnemyClass2">
+                        <option value="1.0">Default</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="1.1">Rider</option>
+                        <option value="1.2">Caster/MC</option>
                     </select>
-                    <label for="ckEn2">
-                        <input type="checkbox" id="ckEn2" value="1" /> 死灵
+                    <label for="ckIsUndying2">
+                        <input type="checkbox" id="ckIsUndying2" value="1" /> 死灵
                     </label>
 		</td>
                 <td>敌人3</td>
                 <td>
-                    <select id="ddlEn3">
-                        <option value="1.0">1.0</option>
-                        <option value="0.8">0.8</option>
-                        <option value="0.9">0.9</option>
-                        <option value="1.1">1.1</option>
-                        <option value="1.2">1.2</option>
+                    <select id="ddlEnemyClass3">
+                        <option value="1.0">Default</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="1.1">Rider</option>
+                        <option value="1.2">Caster/MC</option>
                     </select>
-                    <label for="ckEn3">
-                        <input type="checkbox" id="ckEn3" value="1" /> 死灵
+                    <label for="ckIsUndying3">
+                        <input type="checkbox" id="ckIsUndying3" value="1" /> 死灵
                     </label>
                 </td>
 	    </tr>
@@ -284,25 +284,25 @@
                 </td>
                 <td>敌人1鞭尸</td>
                 <td>
-                    <input type="number" id="txtEn1Overkill" value="0" />
+                    <input type="number" id="txtOverkill1" value="0" />
                 </td>
                 <td>敌人2鞭尸</td>
                 <td>
-                    <input type="number" id="txtEn2Overkill" value="0" />
+                    <input type="number" id="txtOverkill2" value="0" />
                 </td>
                 <td>敌人3鞭尸</td>
                 <td>
-                    <input type="number" id="txtEn3Overkill" value="0" />
+                    <input type="number" id="txtOverkill3" value="0" />
                 </td>
             </tr>
             <tr>
             </tr>
             <tr>
                 <td colspan="8">
-		    <input type="button" value="孔   明" id="btnAddKM" onclick="addKM()" />
-		    <input type="button" value="梅   林" id="btnAddML" onclick="addML()" />	
-		    <input type="button" value="狐   狸" id="btnAddHL" onclick="addHL()" />
-		    <input type="button" value="斯卡蒂" id="btnAddCB" onclick="addCB()" />
+		    <input type="button" value="孔   明" id="btnAddZhuge" onclick="addZhuge()" />
+		    <input type="button" value="梅   林" id="btnAddMerlin" onclick="addMerlin()" />	
+		    <input type="button" value="狐   狸" id="btnAddTamamo" onclick="addTamamo()" />
+		    <input type="button" value="斯卡蒂" id="btnAddSkadi" onclick="addSkadi()" />
 		    <input type="button" value="清   空" id="btnClearBuff" onclick="resetBuff()" />
                     <input type="button" value="计   算" id="btnCalcute" onclick="calc()" />
                 </td>
@@ -378,22 +378,20 @@
     $("ddlServant").onchange = function () {
         $("ckIsSpecialAttack").checked = false;
         $("ckIsMaxGrail").checked = false;
-        $("txtDamagePlus").value = 0;
         $("txtCardBuff").dataset.value = 0;
         $("ddlLvs").selectedIndex=0;
 
         let id = this.value;
         if (id != "-1" && id != "") {
             clearBuff();
-	    $("ddlOvercharge").selectedIndex = 0;
-	    $("ddlOvercharge").oldvalue = "oc1";
             bindServantData(id);
 	    changeOc();
+	    $("ddlOvercharge").oldvalue = $("ddlOvercharge").value;
         }
     }
     //宝具等级选中项发生变化事件
     $("ddlNpLevel").onchange = function () {
-        changeNpRate();
+        changeNpCoefficient();
     };
 
     //OC等级选中项发生变化事件
@@ -544,9 +542,9 @@
 	$("txtNHits").value = servant.hit;
 	$("txtNpGain").value = servant.np;
 	$("txtNpGainBuff").value = 0;
-	$("txtEn1Overkill").value = 0;
-	$("txtEn2Overkill").value = 0;
-	$("txtEn3Overkill").value = 0;
+	$("txtOverkill1").value = 0;
+	$("txtOverkill2").value = 0;
+	$("txtOverkill3").value = 0;
 
         //1.攻击力
         $("txtAttack").value = servant.atk;
@@ -556,7 +554,7 @@
         $("txtRemainHp").value = servant.hp + 1000;
 
         //3.宝具倍率
-        changeNpRate(servant);
+        changeNpCoefficient(servant);
 
         //4.卡色
         document.querySelector("#ddlColor option[value='" + servant.cardColor + "']").selected = true;
@@ -721,35 +719,35 @@
     }
 
 	function adjOverkill(){
-		$("txtEn1Overkill").value = $("txtNHits").value;
-		$("txtEn2Overkill").value = $("txtNHits").value;
-		$("txtEn3Overkill").value = $("txtNHits").value;
+		$("txtOverkill1").value = $("txtNHits").value;
+		$("txtOverkill2").value = $("txtNHits").value;
+		$("txtOverkill3").value = $("txtNHits").value;
 	}
 	function adjHp(){
 		let fullHp = Number($("txtMaxHp").value) + Number($("txtFouHp").value) + Number($("txtCraftEssenceHp").value);
 		$("txtRemainHp").value = fullHp;
 		calNpRemainHpDamageRate();
 	}
-	function addKM(){
+	function addZhuge(){
 		$("txtAttackBuff").value = getFloat("txtAttackBuff") + 30;
 		$("txtDamagePlus").value = getFloat("txtDamagePlus") + 500;	
 	}
 	
-	function addML(){
+	function addMerlin(){
 		$("txtAttackBuff").value = getFloat("txtAttackBuff") + 20;
         	let servant = servants[$("ddlServant").value];
         	if(servant.cardColor == 1.5){
 			$("txtCardBuff").value = getFloat("txtCardBuff") + 50;
 		}
 	}
-	function addHL(){
+	function addTamamo(){
                 $("txtNpStrength").value = getFloat("txtNpStrength") + 30;
         	let servant = servants[$("ddlServant").value];
         	if(servant.cardColor == 1.0){
                         $("txtCardBuff").value = getFloat("txtCardBuff") + 50;
                 }
         }
-	function addCB(){
+	function addSkadi(){
 		$("txtEnemyDefence").value = getFloat("txtEnemyDefence") - 30;
 		let servant = servants[$("ddlServant").value];
                 if(servant.cardColor == 0.8){
@@ -781,9 +779,9 @@
             bindNpSideEffect(servant);
 
 	    $("txtNpGainBuff").value = 0;
-	    $("txtEn1Overkill").value = 0;
-	    $("txtEn2Overkill").value = 0;
-	    $("txtEn3Overkill").value = 0;
+	    $("txtOverkill1").value = 0;
+	    $("txtOverkill2").value = 0;
+	    $("txtOverkill3").value = 0;
 	}
 	function resetBuff()
 	{
@@ -838,8 +836,6 @@
         }
         if (ocs["type"] == "") {
             clearBuff();
-//	}
-//	if (ocs["oc1"] == ocs["oc5"])		
 	    $("ddlOvercharge").selectedIndex = 0;
 	}
     }
@@ -926,7 +922,7 @@
     }
 
     //宝具等级选中项发生变化事件
-    function changeNpRate(servant) {
+    function changeNpCoefficient(servant) {
         if (!servant) {
             let id = $("ddlServant").value;
             servant = servants[id];
@@ -1021,98 +1017,90 @@
 	let npGainBuff = getFloat("txtNpGainBuff");
 
 	switch($("ddlCraftEssence").selectedIndex) {
-	    case 1:
+	    case 2:
 		npStrength = npStrength + 15;
 		break;
-	    case 2:
+	    case 3:
 		npStrength = npStrength + 10;
 		if(cardColor == 1.5) {
 		    cardBuff = cardBuff + 10;
 		}
 		break;
-	    case 3:
+	    case 4:
 		attackBuff = attackBuff + 15;
 		break;
-	    case 4:
+	    case 5:
 		npStrength = npStrength + 60;
 		break;
-            case 5:
+            case 6:
                 npStrength = npStrength + 10;
                 if(cardColor == 1) {
                     cardBuff = cardBuff + 10;
                 }
                 break;
-            case 6:
+            case 7:
                 if(cardColor == 1) {
                     cardBuff = cardBuff + 10;
                 }
 		npGainBuff = npGainBuff + 10;
                 break;
-            case 7:
+            case 8:
                 npStrength = npStrength + 10;
                 if(cardColor == 0.8) {
                     cardBuff = cardBuff + 10;
                 }
                 break;
-	    case 8:
+	    case 9:
 		if(cardColor == 0.8) {
                     cardBuff = cardBuff + 10;
                 }
                 npGainBuff = npGainBuff + 10;
                 break;
 	}
-	switch($("ddlMysticCode").value) {
-	    case "1":
+	npStrength = npStrength + getFloat("ddlMysticCode");
+	switch($("ddlMysticCode").selectedIndex) {
+	    case 1:
 		attackBuff = attackBuff + 30;
 		break;
-	    case "2":
-		npStrength = npStrength + 50;
+	    case 2:
 		npGainBuff = npGainBuff + 50;
 		break;
-            case "3":
+            case 3:
                 if(cardColor == 1.5) {
                     cardBuff = cardBuff + 60;
                 }
 		break;
-	    case "4":
+	    case 4:
 		attackBuff = attackBuff + 50;
                 break;
-	    case "5":
+	    case 5:
 		if(cardColor == 0.8) {
                     cardBuff = cardBuff + 50;
                 }
                 break;
-	    case "6":
+	    case 6:
 		if(cardColor == 0.8) {
                     cardBuff = cardBuff + 30;
                 }
                 break;
-	    case "7":
+	    case 7:
 		if(cardColor == 1) {
                     cardBuff = cardBuff + 50;
                 }
                 break;
-            case "8":
+            case 8:
                 if(cardColor == 1) {
                     cardBuff = cardBuff + 30;
                 }
                 break;
-	    case "9":
+	    case 9:
 		attackBuff = attackBuff + 20;
-		npStrength = npStrength + 10;
 		break;
-	    case "10":
-		npStrength = npStrength + 20;
+	    case 10:
 		if(cardColor == 1) {
                     cardBuff = cardBuff + 30;
                 }
 		break;
-	    case "11":
-		npStrength = npStrength + 35;
-		break;
-            case "12":
-                npStrength = npStrength + 50;
-                break;
 	}
 
         let resultMin = attack * 0.23 * [npRate * cardColor * (1 + cardBuff / 100)] * Class * ClassResist * attributeResist * 0.9 * Math.max(0,(1 + attackBuff / 100 - enemyDefenceBuff / 100))* (1 + specialAttackBuff / 100 + npStrength / 100) * npSpecialAttack + damagePlus;
@@ -1132,30 +1120,30 @@
 		cardNpGain = 1;
 		break;
 	}
-	let npGain1 = getFloat("txtNpGain") * cardNpGain * (1 + npGainBuff / 100) * (1 + cardBuff /100) * getFloat("ddlEn1");
-	if ($("ckEn1").checked) {
+	let npGain1 = getFloat("txtNpGain") * cardNpGain * (1 + npGainBuff / 100) * (1 + cardBuff /100) * getFloat("ddlEnemyClass1");
+	if ($("ckIsUndying1").checked) {
 	    npGain1 = npGain1 * 1.2;
 	}
 	npGain1 = Math.floor(npGain1 * 100) / 100;
 	let npGain1Ok = npGain1 * 1.5;
 	npGain1Ok = Math.floor(npGain1Ok * 100) /100;
-	let npGain1t = (npGain1Ok - npGain1) * getFloat("txtEn1Overkill") + npGain1 * (getFloat("txtNHits"));
-	let npGain2 = getFloat("txtNpGain") * cardNpGain * (1 + npGainBuff / 100) * (1 + cardBuff /100) * getFloat("ddlEn2");
-        if ($("ckEn2").checked) {
+	let npGain1t = (npGain1Ok - npGain1) * getFloat("txtOverkill1") + npGain1 * (getFloat("txtNHits"));
+	let npGain2 = getFloat("txtNpGain") * cardNpGain * (1 + npGainBuff / 100) * (1 + cardBuff /100) * getFloat("ddlEnemyClass2");
+        if ($("ckIsUndying2").checked) {
             npGain2 = npGain2 * 1.2;
         }
         npGain2 = Math.floor(npGain2 * 100) / 100;
         let npGain2Ok = npGain2 * 1.5;
         npGain2Ok = Math.floor(npGain2Ok * 100) / 100;
-        let npGain2t = (npGain2Ok - npGain2) * getFloat("txtEn2Overkill") + npGain2 * (getFloat("txtNHits"));
-	let npGain3 = getFloat("txtNpGain") * cardNpGain * (1 + npGainBuff / 100) * (1 + cardBuff /100) * getFloat("ddlEn3");
-        if ($("ckEn3").checked) {
+        let npGain2t = (npGain2Ok - npGain2) * getFloat("txtOverkill2") + npGain2 * (getFloat("txtNHits"));
+	let npGain3 = getFloat("txtNpGain") * cardNpGain * (1 + npGainBuff / 100) * (1 + cardBuff /100) * getFloat("ddlEnemyClass3");
+        if ($("ckIsUndying3").checked) {
             npGain3 = npGain3 * 1.2;
         }
         npGain3 = Math.floor(npGain3 * 100) / 100;
         let npGain3Ok = npGain3 * 1.5;
         npGain3Ok = Math.floor(npGain3Ok * 100) / 100;
-        let npGain3t = (npGain3Ok - npGain3) * getFloat("txtEn3Overkill") + npGain3 * (getFloat("txtNHits"));
+        let npGain3t = (npGain3Ok - npGain3) * getFloat("txtOverkill3") + npGain3 * (getFloat("txtNHits"));
 	let npGain = npGain1t;
 	switch($("txtNTarget").value) {
 	    case "3":
