--- a/calc.html
+++ b/calc.html
@@ -409,22 +409,24 @@
     $("txtCraftEssenceHp").onchange = function () {
         adjustOc();
     }
-
     //是否特攻
     $("ckIsSpecialAttack").onclick = function () {
 	let id=$("ddlServant").value;
         if (id == "-1" || id == "") {
+	    $("ckIsSpecialAttack").checked = false;
             return;
         }
 
         let servant = servants[id];
 	let ocs = servant.oc;
         if(ocs["type"] == "NpSpecialAttack" || ocs["type"] == "SpecialAttackBuff") {
-	    adjustOc(true);
+	    return;
 	}
 	else {
 	    let npEffect = servant.npEffect;
 	    if (npEffect && npEffect.specialAttack && !isNaN(npEffect.specialAttack)) {
+		return;
+/*
         	//!isNaN(null)，返回true，需要去掉这种情况
                 if($("ckIsSpecialAttack").checked) {
 		    $("txtNpSpecialAttack").value = npEffect.specialAttack;
@@ -432,14 +434,14 @@
 		else {
 		    $("txtNpSpecialAttack").value = 100;
 		}
+*/
 	    }
 	    else {
 		$("ckIsSpecialAttack").checked = false;
 	    }
 	}
     }
-
-     //等级下拉列表选中项改变事件
+    //等级下拉列表选中项改变事件
     $("ddlLvs").onchange=function(){
         let id=$("ddlServant").value;
         if (id == "-1" || id == "") {
@@ -594,9 +596,11 @@
             if (cardBuff && !isNaN(cardBuff)) {//单个数值，比如剑兰宝具的30%蓝魔放buff
                 $("txtCardBuff").value = cardBuff;
             }
-
+	    let npSpecialAttack = npEffect.specialAttack;
+	    if (npSpecialAttack && !isNaN(npSpecialAttack)) {
+                $("txtNpSpecialAttack").value = npSpecialAttack;
+	    }
         }
-
     }
 
     //绑定从者职介信息
@@ -770,7 +774,6 @@
             $("txtAttackBuff").value = 0;
             $("txtNpStrength").value = 0;
 	    $("txtEnemyDefence").value = 0;
-            //$("ddlOvercharge").selectedIndex = 0;
             //设置回被动卡牌buff
             let originNum = getTxtAttrFloatNum("txtCardBuff", "value");
             $("txtCardBuff").value = originNum;
@@ -797,12 +800,12 @@
         }
 
         let ocLevel = $("ddlOvercharge").value;
-        let isSpecialAttack = $("ckIsSpecialAttack");
+//        let isSpecialAttack = $("ckIsSpecialAttack");
         let ocs = servant.oc;
-	if (ocs["type"] == "NpRemainHpDamage") {//双子宝具特攻
+	if (ocs["type"] == "NpRemainHpDamage") {//双子宝具倍率提升
                 calNpRemainHpDamageRate();
         }
-        else if (ocs["type"] == "OcNpDamage") {//自爆弓特攻
+        else if (ocs["type"] == "OcNpDamage") {//自爆弓倍率提升
             calOcNpDamageRate();
         }
 	else if (ocs["type"] == "OcCardBuff") {//R金时OC绿魔放
@@ -826,6 +829,13 @@
 	    $("txtEnemyDefence").value = 0 - ocs[ocLevel];
 	    $("txtCardBuff").value = originNum + ocs[ocLevel];
 	}
+	else if (ocs["type"] == "NpSpecialAttack") {//宝具特攻
+            $("txtNpSpecialAttack").value = ocs[ocLevel];
+        }
+        else if (ocs["type"] == "SpecialAttackBuff") {//杰克女性特攻
+            $("txtSpecialAttack").value = ocs[ocLevel];
+        }
+/*
         if (isSpecialAttack.checked) {//是特攻
             if (ocs["type"] == "NpSpecialAttack") {//宝具特攻
                 $("txtNpSpecialAttack").value = ocs[ocLevel];
@@ -834,7 +844,8 @@
                 $("txtSpecialAttack").value = ocs[ocLevel];
             }
         }
-        if (ocs["type"] == "") {
+*/
+        else if (ocs["type"] == "") {
             clearBuff();
 	    $("ddlOvercharge").selectedIndex = 0;
 	}
@@ -849,25 +860,26 @@
 		return;
 	}
         servant = servants[id];
-        
 
         let ocLevel = $("ddlOvercharge").value;
 	let oldocLevel = $("ddlOvercharge").oldvalue;
 	if(oldocLevel === undefined){ oldocLevel = "oc1";}
-        let isSpecialAttack = $("ckIsSpecialAttack");
+//        let isSpecialAttack = $("ckIsSpecialAttack");
         let ocs = servant.oc;
 
 	if(ocs["type"] == ""){
 		$("ddlOvercharge").selectedIndex = 0;
 		return;
 	}
+/*
 	if(ocs["type"] == "SpecialAttackBuff" && isSpecialAttack.checked == false && is_forced == true){
 		$("txtSpecialAttack").value = getFloat("txtSpecialAttack") - ocs[ocLevel];
 	}
 	if(ocs["type"] == "NpSpecialAttack" && isSpecialAttack.checked == false){
 		$("txtNpSpecialAttack").value = 100;
 	}
-        if (ocs["type"] == "NpRemainHpDamage") {//双子宝具特攻
+*/
+        else if (ocs["type"] == "NpRemainHpDamage") {//双子宝具特攻
                 calNpRemainHpDamageRate();
         }
         else if (ocs["type"] == "OcNpDamage") {//自爆弓特攻
@@ -902,6 +914,15 @@
 	    o = getFloat("txtCardBuff");
             $("txtCardBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
         }
+	else if (ocs["type"] == "NpSpecialAttack") {//宝具特攻
+            $("txtNpSpecialAttack").value = ocs[ocLevel];
+        }
+        else if (ocs["type"] == "SpecialAttackBuff") {//杰克女性特攻
+            let o = getFloat("txtSpecialAttack");
+            $("txtSpecialAttack").value = o + ocs[ocLevel] - ocs[oldocLevel];
+        }
+         
+/*
 	if (isSpecialAttack.checked) {//是特攻
         	if (ocs["type"] == "NpSpecialAttack") {//宝具特攻
                 	$("txtNpSpecialAttack").value = ocs[ocLevel];
@@ -916,9 +937,7 @@
 			}
         	}
 	}
-	if (ocs["oc1"] == ocs["oc5"]) {
-		$("ddlOvercharge").selectedIndex = 0;
-	}
+*/
     }
 
     //宝具等级选中项发生变化事件
@@ -1001,14 +1020,17 @@
         //12.敌方防御力Buff(%)
         let enemyDefenceBuff = getFloat("txtEnemyDefence");
 
-        //13.特攻威力Buff(%)
-        let specialAttackBuff = getFloat("txtSpecialAttack");
+        //13.特攻威力Buff(%)与宝具特攻(%)
+        let specialAttackBuff = 0;
+	let npSpecialAttack = 1;
+	if($("ckIsSpecialAttack").checked) {
+	    specialAttackBuff = getFloat("txtSpecialAttack");
+	    npSpecialAttack = getFloat("txtNpSpecialAttack") / 100;
+	}
 
         //15.固定伤害Buff
         let damagePlus = getFloat("txtDamagePlus");
 
-        //17.宝具特攻(%)     
-        let npSpecialAttack = getFloat("txtNpSpecialAttack") / 100;
         /*
             ATK×攻击补正(0.23)×[宝具倍率×卡牌伤害倍率×(1+卡牌BUFF)]×职阶补正×职阶相性补正×阵营相性补正×乱数补正×(1+攻击力BUFF—敌方防御力BUFF—敌方特防威力BUFF)×(1+特攻威力BUFF+宝具威力BUFF)×宝具特攻
             +(固定伤害BUFF—敌方固定伤害BUFF)
@@ -1187,7 +1209,7 @@
             cardColor: cardColor,
             NP: NP,
             npRate: getFloat("txtNpCoefficient"),
-            npSpecialAttack: getFloat("txtNpSpecialAttack"),
+            npSpecialAttack: npSpecialAttack,
             oc: oc,
             npStrength: npStrength,
             cardBuff: cardBuff,
