--- a/calc.html
+++ b/calc.html
@@ -402,13 +402,13 @@
 
     //Hp值变动事件：动态计算双子宝具倍率
     $("txtRemainHp").onchange = function () {
-	adjOc();
+	adjustOc();
     }
     $("txtFouHp").onchange = function () {
-	adjOc();
+	adjustOc();
     }
     $("txtCraftEssenceHp").onchange = function () {
-	adjOc();
+	adjustOc();
     }
 
     //是否特攻
@@ -575,7 +575,7 @@
         //{ cardColor: 1, cardBuff: 10, damagePlus: 0}
         let ClassSkill = servant.ClassSkill;
 
-        if (ClassSkill) {
+        if (ClassSkill && Object.keys(ClassSkill).length > 0) {
             if (!isNaN(ClassSkill.cardBuff)) {
                 $("txtCardBuff").dataset.value = ClassSkill.cardBuff;
                 $("txtCardBuff").value = ClassSkill.cardBuff;
@@ -743,7 +743,7 @@
         else if (ocs["type"] == "OcAtkBuff") {//B兰OC加攻
             $("txtAttackBuff").value = ocs[ocLevel];
         }
-        else if (ocs["type"] == "NpSpecialDefReduceAttck") {//宝具前降防
+        else if (ocs["type"] == "DefDecrease") {//宝具前降防
             $("txtEnemyDefence").value = 0 - ocs[ocLevel];
 
         }
@@ -790,21 +790,12 @@
         let ocLevel = $("ddlOvercharge").value;
 	let oldocLevel = $("ddlOvercharge").oldvalue;
 	if(oldocLevel === undefined){ oldocLevel = "oc1";}
-//        let isSpecialAttack = $("ckIsSpecialAttack");
         let ocs = servant.oc;
 
 	if(ocs["type"] == ""){
 		$("ddlOvercharge").selectedIndex = 0;
 		return;
 	}
-/*
-	if(ocs["type"] == "SpecialAttackBuff" && isSpecialAttack.checked == false && is_forced == true){
-		$("txtSpecialAttack").value = getFloat("txtSpecialAttack") - ocs[ocLevel];
-	}
-	if(ocs["type"] == "NpSpecialAttack" && isSpecialAttack.checked == false){
-		$("txtNpSpecialAttack").value = 100;
-	}
-*/
         else if (ocs["type"] == "NpRemainHpDamage") {//双子宝具特攻
                 calNpRemainHpDamage();
         }
@@ -824,7 +815,7 @@
                 $("txtAttackBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
                 //$("txtAttackBuff").value = ocs[ocLevel];
         }
-        else if (ocs["type"] == "NpSpecialDefReduceAttck") {//宝具前降防
+        else if (ocs["type"] == "DefDecrease") {//宝具前降防
                 let o = getFloat("txtEnemyDefence");
                 $("txtEnemyDefence").value = o - ocs[ocLevel] + ocs[oldocLevel];
                 //$("txtEnemyDefence").value = 0 - ocs[ocLevel];
@@ -847,23 +838,6 @@
             let o = getFloat("txtSpecialAttack");
             $("txtSpecialAttack").value = o + ocs[ocLevel] - ocs[oldocLevel];
         }
-         
-/*
-	if (isSpecialAttack.checked) {//是特攻
-        	if (ocs["type"] == "NpSpecialAttack") {//宝具特攻
-                	$("txtNpSpecialAttack").value = ocs[ocLevel];
-        	}
-        	else if (ocs["type"] == "SpecialAttackBuff") {//杰克女性特攻
-			if(is_forced == true) {
-				$("txtSpecialAttack").value = getFloat("txtSpecialAttack") + ocs[ocLevel];
-			}
-			else {
-				let o = getFloat("txtSpecialAttack");
-                        	$("txtSpecialAttack").value = o + ocs[ocLevel] - ocs[oldocLevel];
-			}
-        	}
-	}
-*/
     }
 
     //宝具等级选中项发生变化事件
